--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <title>Jazz2Bonus</title>
+    </head>
 <body>
     <h1>
         <img src="page/res/j2b_ico.png"/>
