--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
 <body>
     <h1>
-        <img src="/page-res/j2b_ico.png"/>
+        <img src="page-res/j2b_ico.png"/>
         Jazz Jackrabbit 2 Bonus
     </h1>
     <hr>
