--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
     </h1>
     <hr>
     <h3>
-        This page is under construction.
+        This page is under construction. Still~
     </h3>
+    <br>
+    <lo>
+        <li><a href="https://kszlagk.github.io/jazz2bonus/download/debug/Jazz2Bonus_Debug_0.1.zip">Jazz2Bonus (Windows - Debug 0.1) [~74 MB]</a></li>
+    </lo>
 </body>
 </html>
